# seerohr

./: .gitmodules  README.md
.github/workflows/: cmake-multi-platform.yml  cmake-web.yml
mbase/: CMakeLists.txt
mbase/include/mbase/: access.h  container.h  memory.h  platform.h
mbase/src/: memory.cpp
seerohr/: CMakeLists.txt  bld_web.bat  dpl_web.bat  gen_desktop_fresh.bat  gen_web.bat  srv_web.bat
seerohr/src/: angle.cpp  angle.h  asset.cpp  asset.h  main.cpp  numerical.cpp  numerical.h  raygui_integration.cpp  raygui_integration.h  raygui_widgets.cpp  raygui_widgets.h  raylib_widgets.cpp  raylib_widgets.h  tdc.cpp  tdc.h  tdc2.cpp  tdc2.h  text.cpp  text.h  widgets.cpp  widgets.h
